<resources>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">Terminal</string>
    <string name="action_settings">Settings</string>
    <string name="execute">Execute</string>
    <string name="directory_path">Directory Path Example</string>
    <string name="all_files">All Files</string>
    <string name="all_teachers">All Teachers</string>
    <string name="all_students">All Students</string>
    <string name="teacher_group">Teacher Group</string>
    <string name="teacher_marks">Teacher Marks</string>
    <string name="teacher_subject">Teacher Subject</string>
    <string name="title_activity_list">Linux Lab</string>
    <string name="title_activity_file_management">File Management</string>
    <string name="title_activity_experiment_list">Linux Lab</string>
    <string name="runTerminal">Run Terminal</string>
    <string name="exp1_1">1. The Linux File System\n\n

The file system is a method of consistently naming objects and organizing them in an orderly manner. Some of the operating system like windows organize the file system in drives. The Linux file system is a directory tree that is consistent with each Linux distribution. This directory tree begins with the \"/\" (root) and then expands under that position like an upside down tree. Each directory under \"/\" has a specific purpose whether it is to store system files, constantly changing log files, device drivers or files created by users on the system.\n\n

A home directory is a file system sub-directory on a multi-user operating system containing files for a given user of the system. A user\'s home directory is intended to contain that user\'s files; including text documents, music, pictures or videos, etc. /home/aditi refers to the home directory of the user aditi, ~ is equivalent to the /home/aditi which is the current users home directory.\n\n

The file system also contains a method of securing files, directories and objects in the file system. This is represented by the file permissions that are explained in the experiment File Permissions\n\n
2. The Command Line Prompt\n\n

The commands that will be described are meant to be executed from a command line interface. The command line prompt that shows up in the terminal window contains useful information. It has the form:\n\n

aditi@mylaptop:~/Documents$\n\n

There are three parts in the command line prompt, separated by @ : and $\n\n

The first part before the \'@\' shows the user who is logged in at that moment. In the above example it is the user aditi. The second part between the @ and the : shows the name of the computer that you are working on. In the above example it is mylaptop. The third part, between the : and the $ shows the current directory that you are working on. In the above example it is ~/Documents (~ is a shortcut for the user’s home directory; ~/Documents is equivalent to /home/aditi/Documents). When you change the current directory, then they can find the third part of the command line prompt changing.\n\n
3. Viewing the contents of files and directories\n\n

Viewing the contents of files and directories using three commands, namely pwd, ls and cat.\n\n

a. pwd command\n\n

At any time, in order to see the current directory you can type pwd(Present Working Directory).\n\n

aditi@mylaptop:~/Documents$ pwd\n
 /home/aditi/Documents\n\n

b. ls command\n\n

To list the contents of a directory, the ls command is used. When it is executed with no arguments, it lists the contents of the current working directory.\n\n

The path of a file is the location of a file in the filesystem. There are two ways of specifying the path of a file: relative path and absolute path. Relative path is the location of a file relative to your current location in the filesystem. Absolute path is the location of the file with respect to the root directory. It is independent of the current working directory.</string>
    <string name="exp1_2" formatted="false">Figure 1\n\n
Example1 : Consider the above directory tree (Figure 1)from which we want to list the contents of the folder my_project. Consider our present working directory is /home/aditi/Documents. Doing \"ls my_project\" would list the contents of folder my_project, we are using the relative path here as we are listing from the current working directory. If we use \"ls /home/aditi/Documents/my_project\" from the current working directory, this is considered as the absolute path as we are specifying from \"/\".\n\n

aditi@mylaptop:~/Documents$ ls my_project\n
vlabs_ui\n\n

In the above example, the relative path of the directory has been used.\n\n

aditi@mylaptop:~/Documents$ ls /home/aditi/Documents/my_project\n
 vlabs_ui\n\n

In the above example, the absolute path of the directory has been used. As we can see, the two paths are equivalent.\n\n

Referring to the above Figure:1 and assuming our present working directory is /home/aditi/Documents. \".\" refers to the current directory i.e. Documents and \"..\" refers to the parent directory(of the current directory) in our example it is aditi(home directory).\n\n

\"ls .\" will display all the contents of the current directory\n\n

aditi@mylaptop:~/Documents$ ls .\n
all_about_console.txt  example.txt  my_project\n\n

\"ls ..\" will display all the contents of the parent directory\n\n

aditi@mylaptop:~/Documents$ ls ..\n
Desktop Documents Downloads Music Pictures\n\n

The most used options for the ls command are l, a.\n
Table 1: Common parameters for \'ls\' command\n</string>
    <string name="exp1_3" formatted="false">\naditi@mylaptop:~/Documents$ ls -l\n
total 4\n
-rw-r--r--  1 aditi students 0    2010-08-20 22:22 example.txt\n
-rw-r--r--  1 aditi students 0    2010-08-20 22:22 all_about_console.txt\n
drwxr-xr-x  2 aditi students 4096 2010-08-02 14:03 my_project\n\n

Here, in addition to the name of each file, the file type, file mode bits, number of hard links, owner name, group name, size, and timestamp, normally the modification time are printed.\n\n

The file mode bits contains details regarding the properties of the file. It has 10 fields. The first field refers to the file type. \'d\' means the file is a directory, \'l\' means it is a link, \'-\' means it is a regular file. The next nine fields are the permissions of the owner, group and other, respectively. \'r\', \'w\' and \'x\' in a field means \'read\', \'write\' and \'execute\' permissions, respectively. If a \'-\' is printed in a field, it means that particular permission is not present for the corresponding user, group or other. For detailed explanation go through File Permissions\n\n

aditi@mylaptop:~/Documents$ ls -a\n
.  ..  all_about_console.txt  example.txt  my_project .virtual-lab.txt\n\n

In the above example .virtual-lab.txt was the hidden file, which was displayed when ls was used with -a option.\n\n

. and .. refer to current folder and parent folder, respectively.\n\n

ls can be used with an option \"al\" to list the detail view of the contents of the folder along with the hidden contents.\n\n

aditi@mylaptop:~/Documents$ ls -al\n
total 4\n
-rw-r--r--  1 aditi students 0    2010-08-20 22:22 example.txt\n
-rw-r--r--  1 aditi students 0    2010-08-20 22:22 .virtual-labs.txt\n
-rw-r--r--  1 aditi students 0    2010-08-20 22:22 all_about_console.txt\n
drwxr-xr-x  2 aditi students 4096 2010-08-02 14:03 my_project\n\n

Whenever you need help about commands in Linux, you can read the man pages, which contain detailed information about commands and their options. To know more about the ls command, see the man page, type:\n\n

aditi@mylaptop:~/Documents$ man ls\n\n

Information about the command will appear on the screen. You can move up and down using the arrow keys. In order to exit from the man page type key \"q\".\n\n

c. cat command\n\n

cat command displays the contents of the file passed as argument. If multiple files are passed, it prints the concatenated content of all the files.\n\n

aditi@mylaptop:~/Documents$ cat virtual-lab.txt\n
Welcome to Linux Lab!\n\n

In the above example cat displays content of the file virtual-lab.txt.\n\n

Type the clear command to clear your screen.\n
4. Moving through directories:\n\n

a. cd command\n\n

The command cd (change directory) allows us to move through directory trees. It has one parameter: target directory path. If no parameter is mentioned it will go to the current users home directory. If the parameter \"..\" is used, it will take you to previous directory(parent directory).\n\n

aditi@mylaptop:~/Documents$ cd my_project\n
aditi@mylaptop:~/Documents/my_project$ pwd\n
/home/aditi/Documents/my_project\n\n

aditi@mylaptop:~/Documents/my_project$ cd ..\n
/home/aditi/Documents\n\n

aditi@mylaptop:~Documents/my_project$ cd \n\n

aditi@mylaptop:~$ pwd\n
/home/aditi\n\n

5. Creating files and folders:\n\n

b. touch command\n\n

It creates an empty file directly from the command line. In order to do it, type:\n\n

aditi@mylaptop:~/Documents$ ls\n
all_about_console.txt example.txt my_project\n
aditi@mylaptop:~/Documents$ touch newfile.txt\n
aditi@mylaptop:~/Documents$ ls \n
all_about_console.txt  example.txt my_project newfile.txt\n\n

An empty file with the specified name will be created. If a file with that name already exists on disk, it will remain there and moment of last update is changed in the properties of the file.\n\n

c. mkdir command\n\n

The mkdir command takes one or more parameters and creates the folders corresponding to the parameters.\n\n

aditi@mylaptop:~/Documents$ ls \n
all_about_console.txt  example.txt  my_project newfile.txt \n
aditi@mylaptop:~/Documents$ mkdir new_folder\n
aditi@mylaptop:~/Documents$ ls \n
all_about_console.txt  example.txt  my_project newfile.txt new_folder\n\n

6. Copying, Moving and removing files and folders:\n\n

a. cp command\n\n

cp command is used to create a copy of files. It can be invoked with two arguments, SOURCE and DEST in which case it copies SOURCE to DEST.\n\n

 aditi@mylaptop:~/Documents$ ls\n
all_about_console.txt  example.txt  my_project new_folder\n\n

aditi@mylaptop:~/Documents$ cd my_project\n
aditi@mylaptop:~/Documents$ ls\n
vlabs_ui \n\n

aditi@mylaptop:~/Documents$ cp example.txt my_project/example_copy.txt\n
aditi@mylaptop:~/Documents$ ls my_project\n
vlabs_ui  example_copy.txt\n\n

For copying directories, the -r (recursive) option is used.\n\n

aditi@mylaptop:~Documents$ ls my_project\n
vlabs_ui example_copy.txt\n
aditi@mylaptop:~/Documents$ cp -r new_folder my_project/new_folder_copy \n
aditi@mylaptop:~/Documents$ cd my_project\n
aditi@mylaptop:~/Documents$ ls\n
vlabs_ui example_copy.txt new_folder_copy\n\n

b. mv command\n\n

The mv command is used to change the location of directories and files or renaming them. Parameters are taken in a similar way as the cp command.\n\n

aditi@mylaptop:~/Documents$ ls\n
vlabs_ui example_copy.txt new_folder_copy\n\n
 
 aditi@mylaptop:~/Documents$ mv example.txt my_project/example_move.txt\n\n

 aditi@mylaptop:~/Documents$ ls my_project\n
 vlabs_ui  example_copy.txt new_folder_copy example_move.txt \n\n

c. rm command\n\n

rm command removes files. It can be used with the -r option to remove directories.\n\n

aditi@mylaptop:~/Documents$ ls \n
all_about_console.txt  example.txt  my_project  newfile.txt  new_folder \n\n

aditi@mylaptop:~/Documents$ rm example.txt\n\n

aditi@mylaptop:~/Documents$ rm -r new_folder\n\n

aditi@mylaptop:~/Documents$ ls\n
all_about_console.txt  my_project  newfile.txt\n\n

d. rmdir command\n\n

rmdir command removes empty directories.\n\n

aditi@mylaptop:~/Documents$ mkdir new_folder\n
aditi@mylaptop:~/Documents$ ls\n
all_about_console.txt my_project newfile.txt  new_folder\n
aditi@mylaptop:~/Documents$ rmdir new_folder\n
aditi@mylaptop:~/Documents$ ls\n
all_about_console.txt  my_project  newfile.txt\n\n

The commands cp, mv, and rm have the following commonly used parameters:\n
Table 2 Common parameters for \'cp\', \'mv\' and \'rm\'</string>
</resources>